--- a/package.json
+++ b/package.json
@@ -42,14 +42,15 @@
     "date-fns": "^4.1.0",
     "embla-carousel-react": "^8.6.0",
     "input-otp": "^1.4.2",
+    "install": "^0.13.0",
     "lucide-react": "^0.563.0",
     "next": "16.1.6",
     "next-themes": "^0.4.6",
+    "npm": "^11.8.0",
     "react": "19.2.3",
     "react-day-picker": "^9.13.0",
     "react-dom": "19.2.3",
     "react-hook-form": "^7.71.1",
-    "react-quill": "^2.0.0",
     "react-quill-new": "^3.8.2",
     "react-resizable-panels": "2.1.7",
     "recharts": "^2.15.4",
