--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     "@radix-ui/react-toggle": "^1.1.10",
     "@radix-ui/react-toggle-group": "^1.1.11",
     "@radix-ui/react-tooltip": "^1.2.8",
+    "@reduxjs/toolkit": "^2.11.2",
+    "axios": "^1.13.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
@@ -43,6 +45,7 @@
     "embla-carousel-react": "^8.6.0",
     "input-otp": "^1.4.2",
     "install": "^0.13.0",
+    "js-cookie": "^3.0.5",
     "lucide-react": "^0.563.0",
     "next": "16.1.6",
     "next-themes": "^0.4.6",
@@ -52,6 +55,7 @@
     "react-dom": "19.2.3",
     "react-hook-form": "^7.71.1",
     "react-quill-new": "^3.8.2",
+    "react-redux": "^9.2.0",
     "react-resizable-panels": "2.1.7",
     "recharts": "^2.15.4",
     "sonner": "^2.0.7",
@@ -61,6 +65,7 @@
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
